Fixed: gap and padding

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,7 +20,9 @@
    .container .row {
     display: flex;  
     flex-wrap: wrap;
-    }
+    gap: 4.5rem
+   }
+
    
     .lessons .col {
         width: 100%;
@@ -35,5 +37,13 @@
         width: 100%;
     }
     
-    
+    .steps.text-center {
+        margin-bottom: 0;
+    }
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0;
+        padding: 3rem;
+    }
 }
